src/component/gallery/gallery-card.module.scss
body {
    --bookshelf--gallery-card--padding: 0.5rem;
    --bookshelf--gallery-card--border-radius: 6px;
    --bookshelf--gallery-card--background-color: var(--background-primary-alt);
    --bookshelf--gallery-card--shadow: var(--shadow-s);
    --bookshelf--gallery-card--image--border-radius: 0;
}

.galleryCard {
    display: flex;
    flex-flow: column;
    gap: 0.5rem;
    justify-content: center;
    position: relative;
    width: 100%;
    height: fit-content;
    max-width: 200px;
    box-sizing: border-box;
    background-color: var(--bookshelf--gallery-card--background-color);
    padding: var(--bookshelf--gallery-card--padding);
    box-shadow: var(--bookshelf--gallery-card--shadow);
    border-radius: var(--bookshelf--gallery-card--border-radius);

    &[data-status='finished'] {
        --status-color: var(--color-green);
    }

    &[data-status='abandoned'] {
        --status-color: var(--color-base-70);
    }

    img {
        display: block;
        width: 100%;
        border-radius: var(--bookshelf--gallery-card--image--border-radius);
    }

    .ribbon {
        position: absolute;
        top: 0;
        right: 10%;
        z-index: 2;
        display: block;
        padding: 0.5rem 0.25rem;
        filter: drop-shadow(1px 2px 2px rgba(0, 0, 0, 0.5));

        &:before {
            position: absolute;
            top: 0;
            right: 0;
            display: block;
            width: 100%;
            height: 100%;
            content: '';
            background-color: var(--status-color);
            clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 80%, 0 100%);
        }
    }

    .title {
        display: block;
        font-weight: bold;
        text-align: center;
        overflow-wrap: break-word;
        cursor: default;
    }

    .overlay {
        display: none;
        flex-flow: column;
        justify-content: center;
        position: absolute;
        left: 0;
        top: 0;
        width: 100%;
        height: 100%;
        z-index: 1;
        padding: var(--bookshelf--gallery-card--padding);
        background-color: rgb(from var(--bookshelf--gallery-card--background-color) r g b / 0.8);
        box-sizing: border-box;
        border-radius: var(--bookshelf--gallery-card--border-radius);
    }

    &:hover .overlay {
        display: flex;
    }
}

